fix(design-system): set correct `z-index` for `DsTimePicker` dropdown [AR-57366] (#409)
[Jira](https://drivenets.atlassian.net/browse/AR-57366)


https://github.com/user-attachments/assets/a938efd7-9727-42cf-ad4a-65064ee0e8da

--- a/packages/design-system/src/components/ds-time-picker/ds-time-picker.module.scss
+++ b/packages/design-system/src/components/ds-time-picker/ds-time-picker.module.scss
@@ -1,3 +1,5 @@
+@use '../../styles/shared/dropdown';
+
 .root {
 	&:where(:hover, :focus-within) {
 		.clearTrigger {
@@ -8,4 +10,9 @@
 
 .clearTrigger {
 	visibility: hidden;
+}
+
+.content {
+	@include dropdown.dropdown-content;
+	width: auto;
 }
